updated docker config

--- a/default.conf
+++ b/default.conf
@@ -1,6 +1,9 @@
 server {
     listen 80;
     server_name local.inexsafety.com;
+    
+    error_log  /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
 
     root /var/www/html/public;
 
@@ -11,11 +14,9 @@ server {
     }
 
     location ~ \.php$ {
-        include snippets/fastcgi-php.conf;  # Include the FastCGI PHP configuration
-
-        fastcgi_pass php-fpm:9000;  # Pass PHP requests to PHP-FPM
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_pass php:9000;  # Change php-fpm to php
     }
 
     location ~ /\.ht {
