--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: sign_project
-      MYSQL_USER: root
-      MYSQL_PASSWORD: root
+      MYSQL_USER: sign_controller
+      MYSQL_PASSWORD: abc@!@3
     ports:
       - "3306:3306"
     volumes:
